namespace.yaml
# Предотвращает конфликты с другими приложениями и упрощает применение RBAC, квот и очистку ресурсов.
apiVersion: v1
kind: Namespace
metadata:
  name: webapp-prod
